2009-10-16  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Eric Seidel.

        Added test case for testing navigator.language.
        https://bugs.webkit.org/show_bug.cgi?id=29653

        Different browsers may not return the exact same result.
        Some examples here:
        Safari 4 WinXP: "en-US"
        Safari 4 Mac: "en-us"
        Firefox 3 Mac/WinXP: "en-US"
        Opera 9.64: "en"
        Epiphany 2 GTK: "en"
        Chrome 3 WinXP: "en-US"

        The test case checks if the first two letters are "en"
        when system locale is set to "en_US.iso88591".

        * fast/js/navigator-language-expected.txt: Added.
        * fast/js/navigator-language.html: Added.
2009-10-16  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Eric Seidel.

        Default language translation should be determined by locale settings,
        e.g., "en-US".
        https://bugs.webkit.org/show_bug.cgi?id=29653

        Test: fast/js/navigator-language.html

        * platform/qt/Localizations.cpp:
        (WebCore::defaultLanguage):

Canonical link: https://commits.webkit.org/41135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49675 268f45cc-cd09-0410-ab3c-d52691b4dbfc